[gd_scene load_steps=13 format=2]

[ext_resource path="res://RegexRule/RegexRule.gd" type="Script" id=1]
[ext_resource path="res://Fonts/NotoMono-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://RegexRule/DeleteRule/minus.png" type="Texture" id=3]
[ext_resource path="res://RegexRule/DeleteRule/minus_down.png" type="Texture" id=4]
[ext_resource path="res://RegexRule/DeleteRule/minus_hover.png" type="Texture" id=5]
[ext_resource path="res://RegexRule/AddRule/plus.png" type="Texture" id=6]
[ext_resource path="res://RegexRule/AddRule/plus_down.png" type="Texture" id=7]
[ext_resource path="res://RegexRule/AddRule/plus_hover.png" type="Texture" id=8]
[ext_resource path="res://RegexRule/regex_valid_indicator.png" type="Texture" id=9]
[ext_resource path="res://ValidationIndicator.gd" type="Script" id=10]

[sub_resource type="DynamicFont" id=1]
use_mipmaps = true
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[node name="RegexRule" type="HBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -576.0
size_flags_horizontal = 3
alignment = 1
script = ExtResource( 1 )

[node name="RuleNumberLabel" type="Label" parent="."]
margin_right = 18.0
margin_bottom = 27.0
theme = SubResource( 2 )
text = "0"
align = 1
valign = 3
uppercase = true

[node name="DeleteRegexButton" type="TextureButton" parent="."]
margin_left = 22.0
margin_top = 5.0
margin_right = 38.0
margin_bottom = 21.0
hint_tooltip = "Delete this regex rule."
focus_mode = 0
size_flags_vertical = 4
enabled_focus_mode = 0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 5 )

[node name="AddNewRegexButton" type="TextureButton" parent="."]
margin_left = 42.0
margin_top = 5.0
margin_right = 58.0
margin_bottom = 21.0
hint_tooltip = "Add a new regex rule."
focus_mode = 0
size_flags_vertical = 4
enabled_focus_mode = 0
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 7 )
texture_hover = ExtResource( 8 )

[node name="ValidRegexIndicator" type="TextureRect" parent="."]
margin_left = 62.0
margin_top = 5.0
margin_right = 78.0
margin_bottom = 21.0
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource( 9 )
script = ExtResource( 10 )

[node name="RegexLineEdit" type="LineEdit" parent="."]
margin_left = 82.0
margin_right = 410.0
margin_bottom = 27.0
size_flags_horizontal = 3
placeholder_text = "Regular Expression"
caret_blink = true
caret_blink_speed = 0.5

[node name="Label" type="Label" parent="."]
margin_left = 414.0
margin_top = 2.0
margin_right = 500.0
margin_bottom = 24.0
text = "replace with"
align = 1
valign = 3

[node name="ReplacementLineEdit" type="LineEdit" parent="."]
margin_left = 504.0
margin_right = 832.0
margin_bottom = 27.0
size_flags_horizontal = 3
placeholder_text = "Replacement Text"
caret_blink = true
caret_blink_speed = 0.5

[node name="AffectsSelectedFilesCheckBox" type="CheckBox" parent="."]
margin_left = 836.0
margin_right = 1023.0
margin_bottom = 27.0
focus_mode = 0
enabled_focus_mode = 0
text = "Only affect selected files"

[node name="RegexCompileTimer" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[connection signal="pressed" from="DeleteRegexButton" to="." method="_on_DeleteRegexButton_pressed"]
[connection signal="pressed" from="AddNewRegexButton" to="." method="_on_AddNewRegexButton_pressed"]
[connection signal="text_changed" from="RegexLineEdit" to="." method="_on_RegexLineEdit_text_changed"]
[connection signal="text_changed" from="ReplacementLineEdit" to="." method="_on_ReplacementLineEdit_text_changed"]
[connection signal="toggled" from="AffectsSelectedFilesCheckBox" to="." method="_on_AffectsSelectedFilesCheckBox_toggled"]
[connection signal="timeout" from="RegexCompileTimer" to="." method="_on_RegexCompileTimer_timeout"]
